// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterDropdown component should render 1`] = `
<Component
  className="ins-c-filter__dropdown"
  isOpen={false}
  toggle={
    <Unknown
      onToggle={[Function]}
    >
      Filters
    </Unknown>
  }
>
  <div
    className="pf-c-dropdown__menu-item"
  >
    <Component
      key="0"
    >
      <FilterInput
        addRemoveFilters={[Function]}
        aria-label=""
        className={null}
        currentPage={null}
        filters={Object {}}
        id="0"
        key="check00"
        label=""
        param=""
        type=""
        value=""
      />
    </Component>
  </div>
</Component>
`;

exports[`FilterDropdown component should render with a component as label 1`] = `
<Component
  className="ins-c-filter__dropdown"
  isOpen={false}
  toggle={
    <Unknown
      onToggle={[Function]}
    >
      <React.Fragment />
    </Unknown>
  }
>
  <div
    className="pf-c-dropdown__menu-item"
  >
    <Component
      key="0"
    >
      <FilterInput
        addRemoveFilters={[Function]}
        aria-label=""
        className={null}
        currentPage={null}
        filters={Object {}}
        id="0"
        key="check00"
        label=""
        param=""
        type=""
        value=""
      />
    </Component>
  </div>
</Component>
`;
